  (Ilia)
- Fixed bug #35797 (segfault on PDOStatement::execute() with 
  zend.ze1_compatibility_mode = On). (Tony, Ilia)
- Fixed bug #35781 (stream_filter_append() can cause segfault). (Tony)
- Fixed bug #35759 (mysqli_stmt_bind_result() makes huge allocation when
  column empty). (Andrey)
- Fixed bug #35751 (using date with a timestamp makes httpd segfault). (Derick)
- Fixed bug #35517 (mysql_stmt_fetch returns NULL on data truncation). (Georg)
- Fixed bug #35377 (PDO_SQLITE: undefined reference to "fdatasync").
  (Nuno, Jani)
- Fixed bug #35288 (iconv() function defined as libiconv()). (Nuno)
- Fixed bug #33789 (Many Problems with SunFuncs). (Derick)
- Fixed bug #33671 (sun_rise and sun_set don't return a GMT timestamp if one
  passes an offset). (Derick)
- Fixed bug #32820 (date_sunrise and date_sunset don't handle GMT offset
  well). (Derick)
- Fixed bug #30937 (date_sunrise() & date_sunset() don't handle endless
  day/night at high latitudes). (Derick)
- Fixed bug #29955 (mb_strtoupper() / lower() broken with Turkish encoding).
  (Rui)
- Fixed bug #28899 (mb_substr() and substr() behave differently when
  "mbstring.func_overload" is enabled). (Rui)

22 Dec 2005, PHP 5.1.2RC1
- Updated libsqlite in ext/sqlite to 2.8.17. (Ilia)
- Updated libsqlite in ext/pdo_sqlite to 3.2.8. (Ilia)
- Updated to libxml2-2.6.22 and libxslt-1.1.15 in the win32 bundle. (Rob)
- Added new extensions: (Ilia, Wez)
  . XMLWriter
  . Hash
- Added PNG compression support to GD extension. (Pierre)
- Added reflection constants as class constants. (Johannes)
- Added --enable-gcov configure option to enable C-level code coverage.
  (John, Jani, Ilia, Marcus)
- Added missing support for 'B' format identifier to date() function. (Ilia)
- Changed reflection to be an extension. (Marcus)
- Improved SPL extension: (Marcus)
  . Added class SplFileInfo as root class for DirectoryIterator and 
    SplFileObject
  . Added SplTempFileObject
- Improved SimpleXML extension: (Marcus)
  . Fixed memleaks